apps/copyparty/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: copyparty
  namespace: copyparty
spec:
  selector:
    app: copyparty
  ports:
    - port: 80
      targetPort: 3923
